fix test and ready for war yo