@@ -12,19 +12,20 @@ import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Map;
 import java.util.stream.Stream;
 
 @Component
 @Slf4j
 public class FileCollector implements Tasklet {
-    @Value("${sales.info.directory}")
-    private String processedDirectory;
 
     @Override
     public RepeatStatus execute(StepContribution contribution, ChunkContext chunkContext) throws Exception {
         log.warn("-------------> Executing the File Collector");
-        Path directoryPath = Paths.get(processedDirectory + File.separator + "processed");
-        try (Stream<Path> filesToDelete = Files.walk(directoryPath)) {
+        Map<String, Object> jobParameters = chunkContext.getStepContext().getJobParameters();
+        String inputFile = (String) jobParameters.get("input.file.name");
+        String processedFolder = Path.of(inputFile).getParent() + File.separator + "processed";
+        try (Stream<Path> filesToDelete = Files.walk(Path.of(processedFolder))) {
             filesToDelete.filter(Files::isRegularFile)
                     .map(Path::toFile)
                     .forEach(File::delete);
